Fix broken animation on Safari
Closes #120

--- a/src/skeleton.css
+++ b/src/skeleton.css
@@ -19,6 +19,7 @@
 
     position: relative;
     overflow: hidden;
+    z-index: 1; /* Necessary for overflow: hidden to work correctly in Safari */
 }
 
 .react-loading-skeleton::after {
